--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -10,6 +10,11 @@
         <div class="row buttons">
             <div class="col-3">
 
+                <button  [routerLink]="['home']" href="" class="botonic btn btn-danger">
+                    Volver al Inicio
+                    <i class="fas fa-home"></i>
+                </button>
+
                 <button class="btn btn-info" [routerLink]="['crear']" routerLinkActive="activa">
                     Crear Partida
                 </button>
