--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -26,68 +26,82 @@
             <option *ngFor="let modos of arrModosByJuego" [value]="modos.id_modo">{{modos.nombre}}</option>
         </select>
 
+        <select (change)="onChangeRangos($event)">
+            <option value="" disabled selected>Filtrar por Rango</option>
+            <option *ngFor="let rangos of arrRangosByJuego" [value]="rangos.id_rango">{{rangos.rango}}
+            </option>
+        </select>
+
+        <select (change)="onChangeFechas($event)">
+            <option value="" disabled selected>Filtrar por Fecha de publicación</option>
+            <option value="A">Mas recientes primero</option>
+            <option [value]="true">Mas antiguas primero</option>
+        </select>
+
         <div class="todasPartidas">
             <div class="wrapper col-12">
 
-    <div class="todasPartidas">
-        <div class="wrapper col-12">
-            
-            <h4 class="headerJuego">Juego</h4>
-                   
-            <h4 class="headerFecha">Fecha</h4>
-                   
-            <h4 class="headerModo">Modo de juego</h4>
-                   
-            <h4 class="headerUser">Usuario creador</h4>
-                   
-            <h4 class="headerRango">Rango</h4>
-              
-        </div> 
-            
-    </div>
-    <div class="col-xs-12" *ngFor="let partida of arrPartidasByJuego">
-        <div class="list-group-item">
-            <div class="row">
-                <div class="col">
-                    <div class="item-col">
-                        <div class="content-col">
-                            <img [src]="partida.imagen_juego" alt="">
-                            <p><span>{{partida.nombre_juego}}</span></p>
-                        </div>
+                <div class="todasPartidas">
+                    <div class="wrapper col-12">
+
+                        <h4 class="headerJuego">Juego</h4>
+
+                        <h4 class="headerFecha">Fecha</h4>
+
+                        <h4 class="headerModo">Modo de juego</h4>
+
+                        <h4 class="headerUser">Usuario creador</h4>
+
+                        <h4 class="headerRango">Rango</h4>
+
                     </div>
+
                 </div>
-                <div class="col">
-                    <div class="item-col">
-                        <div class="content-col fecha">{{partida.fecha }}</div>
-                    </div>
-                    <div class="col">
-                        <div class="item-col">
-                            <div class="item-col">
-                                {{partida.nombre_modo}}
+                <div class="col-xs-12" *ngFor="let partida of arrPartidasByJuego">
+                    <div class="list-group-item">
+                        <div class="row">
+                            <div class="col">
+                                <div class="item-col">
+                                    <div class="content-col">
+                                        <img [src]="partida.imagen_juego" alt="">
+                                        <p><span>{{partida.nombre_juego}}</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="item-col">
+                                    <div class="content-col fecha">{{partida.fecha | date:'dd/MM/yy' }}</div>
+                                </div>
+                                <div class="col">
+                                    <div class="item-col">
+                                        <div class="item-col">
+                                            {{partida.nombre_modo}}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <!-- <i class="bi bi-file-person-fill" style="font-size: 2rem; color: cornflowerblue;"></i> -->
+                                    <div>{{partida.username}}</div>
+                                </div>
+                                <div class="col">
+                                    <div class="item-col">
+                                        <div class="content-col">
+                                            {{partida.rango}}
+                                            <img [src]="partida.imagen_rango" alt="">
+
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col">
+                                    <p>{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
+                                    <button
+                                        [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"
+                                        class="btn btn-info">Ver
+                                        detalle</button>
+
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <!-- <i class="bi bi-file-person-fill" style="font-size: 2rem; color: cornflowerblue;"></i> -->
-                        <div>{{partida.username}}</div>
-                    </div>
-                    <div class="col">
-                        <div class="item-col">
-                            <div class="content-col">
-                                {{partida.rango}}
-                                <img [src]="partida.imagen_rango" alt="">
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <p>{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
-                        <button [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"
-                            class="btn btn-info">Ver detalle</button>
-
-                    </div>
                 </div>
-            </div>
-        </div>
-    </div>
