--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -86,7 +86,9 @@
                     </div>
 
                     <div class="col boton">
-                        <p>{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
+                        <p class="verde" *ngIf="partida.cantidad_jugadores < partida.jugadores_max">{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}
+                        </p>
+                        <p class="rojo" *ngIf="partida.cantidad_jugadores > partida.jugadores_max">{{partida.cantidad_jugadores}}/{{partida.jugadores_max}}</p>
                         <button [routerLink]="['/juego', partida.id_juego,'partidas',partida.registro_partida]"
                             class="btn btn-info">Ver detalle</button>
 
