--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,7 @@
         <h1>Duo<span>Tracker</span></h1>
         <h2>¿Quieres difrutar de los videojuegos acompañad@?</h2>
         <img src="../../assets/images/Logotipo.jpg">
+        <p>DuoTracker es una plataforma web que permite: crear partidas de los videojuegos mas populares , asi como unirte a otras ya creadas, pudiendo competir contra otros jugadores/as.</p>
     </div>
 </div>
 <div class="container">
@@ -12,9 +13,9 @@
         <div class="card-body">
           <h5 class="card-title">{{juego.nombre}}</h5>
           <ul class="card-text" class="list-group list-group-flush">
-          <li class="list-group-item">Busca jugadores similares a tu nivel</li>
-          <li class="list-group-item">Crea sinergías</li>
-          <li class="list-group-item">Comparte tus partidas y resultados</li>
+          <li class="list-group-item">Año de lanzamiento: {{juego.lanzamiento}}</li>
+          <li class="list-group-item">Empresa: {{juego.empresa}}</li>
+          <li class="list-group-item">Plataformas Disponibles: {{juego.plataforma}}</li>
           <li class="list-group-item"><a href={{juego.estadisticas}} target="_blank">Analiza tus estadísticas</a> </li></ul>
           <button [routerLink]="['/juego',juego.id]" routerLinkActive="activa" class="btn btn-block btn-primary">Ir a {{juego.nombre}}</button>
         </div>
