--- a/src/app/juego/juego.component.css
+++ b/src/app/juego/juego.component.css
@@ -18,10 +18,10 @@ body {
     margin-left: 15px;
 }
 .headerModo{
-    margin-left: 55px;
+    margin-left: 15px;
 }
 .headerUser{
-    margin-left: -20px;
+    margin-left: 0px;
 }
 .headerRango{
     margin-left: -30px;
@@ -127,30 +127,31 @@ h3{
     margin-top: 20px;
 }
 .fecha{
-    margin-left: -400px;
+    margin-left: -150px;
     margin-top: 50px;
 }
 .item-col-modo{
-    margin-left: -200px;
+    margin-left: -0px;
     margin-top: -25px;
 
 }
 .content-col-rango{
-    margin-top: -35px;
-    margin-left: 175px;
+    margin-top: -42.5px;
+    margin-left: 315px;
 }
 .usuariocreador{
     margin-top: -25px;
+    margin-left: 220px;
 }
 .boton p{
-    margin-left: 375px;
+    margin-left: 265px;
     margin-top: 50px;
     border: 1px solid black;
     text-align: center;
 }
 .boton button{
     width: 25%;
-    margin-left: 375px;
+    margin-left: 265px;
     margin-top: -250px;
 }
 .botonic {
@@ -169,3 +170,7 @@ h3{
 .rojo{
     color: red;
 }
+.select select{
+    margin:15px 15px;
+}
+   
