--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,37 +1,54 @@
 <div class="container">
 
     <!-- MOSTRAR PERFIL -->
-    <div class="row">
-        <div class="col">
+    <div class="row perfil">
+        <div class="col-2.5">
             <img src="../../assets/images/pngwing.com.png" alt="" style="max-width: 150px;">
+            <ul class="list-group row" *ngIf="mostrarDatos">
+                <li class="list-group-item">Nombre de usuario: {{usuarioDatos?.username}}</li>
+                <li class="list-group-item">Email: {{usuarioDatos?.email}}</li>
+                <li class="list-group-item">Plataforma preferida: {{usuarioDatos?.plataforma_preferida}}</li>
+                <li class="list-group-item">Juego preferido: {{usuarioDatos?.juego_preferido}}</li>
+                <li class="list-group-item">Fecha de registro: {{usuarioDatos?.fecha_registro | date:'dd/MM/yy'}}</li>
+                <li class="list-group-item"><button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar Perfil</button><button (click)="onClick()" class="btn btn-danger"> Cerrar Sesión </button></li>
+            </ul>
         </div>
-        <div class="col" *ngIf="mostrarDatos">
+     <!--    <div class="col" *ngIf="mostrarDatos">
             USUARIO
             <p>Nombre de usuario: {{usuarioDatos?.username}}</p>
             <p>Email: {{usuarioDatos?.email}}</p>
             <p>Plataforma preferida: {{usuarioDatos?.plataforma_preferida}}</p>
             <p>Juego preferido: {{usuarioDatos?.juego_preferido}}</p>
             <p>fecha de registro: {{usuarioDatos?.fecha_registro | date:'dd/MM/yy'}}</p>
-        </div>
-
-        <button (click)="onClick()" class="btn btn-info"> cerrar sesión</button>
+        </div> -->
+    <!--     <div class="col-2.5">
+            <ul class="list-group row" *ngIf="mostrarDatos">
+                <li class="list-group-item">Nombre de usuario: {{usuarioDatos?.username}}</li>
+                <li class="list-group-item">Email: {{usuarioDatos?.email}}</li>
+                <li class="list-group-item">Plataforma preferida: {{usuarioDatos?.plataforma_preferida}}</li>
+                <li class="list-group-item">Juego preferido: {{usuarioDatos?.juego_preferido}}</li>
+                <li class="list-group-item">Fecha de registro: {{usuarioDatos?.fecha_registro | date:'dd/MM/yy'}}</li>
+                <li class="list-group-item"><button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar Perfil</button><button (click)="onClick()" class="btn btn-danger"> Cerrar Sesión </button></li>
+            </ul>
+        </div> -->
+        <!-- <button (click)="onClick()" class="btn btn-danger"> Cerrar Sesión</button> -->
     </div>
 
 
     <!-- MODIFICAR PERFIL -->
-    <div class="form-group" *ngIf="mostrarForm">
+    <div class="form-group formularioModificacion" *ngIf="mostrarForm">
         <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
             <input hidden type="number" formControlName="id">
             <div class="form-group">
                 <label for="username">Nombre de usuario</label>
-                <input type="text" value={{usuarioDatos?.username}} formControlName="username">
+                <input type="text" value={{usuarioDatos?.username}} formControlName="username" [placeholder]="usuarioDatos?.username">
                 <p class="text-danger"
                     *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched"> El
                     campo nombre de usuario es requerido.</p>
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="text" value={{usuarioDatos?.email}} formControlName="email">
+                <input type="text" value={{usuarioDatos?.email}} formControlName="email" [placeholder]="usuarioDatos?.email">
                 <p class="text-danger"
                     *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
                     obligatorio completar este campo.</p>
@@ -40,7 +57,7 @@
                     no es válido</p>
             </div>
             <div class="form-group">
-                <label for="">plataforma preferida</label>
+                <label for="">Plataforma Preferida</label>
                 <select formControlName="plataforma_preferida">
                     <option disabled value="">Selecciona una plataforma</option>
                     <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
@@ -48,7 +65,7 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="">juego preferido</label>
+                <label for="">Juego Preferido</label>
                 <select formControlName="juego_preferido">
                     <option disabled value="">Selecciona un juego</option>
                     <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
@@ -57,7 +74,13 @@
 
 
             <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
+            
+            
         </form>
+        
+    </div>
+    <div class="cancelarModificacion" >
+        <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>
     </div>
 </div>
 <div class="row">
@@ -68,8 +91,8 @@
         2 of 3
     </div>
     <div class="col">
-        <button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar</button>
+<!--         <button (click)="botonModificar()" class="btn btn-info" *ngIf="mostrarModificar">Modificar</button> -->
 
-        <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>
+        <!--  <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>  -->
     </div>
 </div>
