--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,18 @@
-<div class="hero">
-    <div>
-        <h1>Duo<span>Tracker</span></h1>
-        <h2>¿Quieres difrutar de los videojuegos acompañad@?</h2>
-        <img src="../../assets/images/Logotipo.jpg">
-    </div>
-</div>
 <div class="container">
-  <div class="row juegos" >
+  <div class="row juegos">
     <div class="card col-3 " style="width: 18rem; margin:10px;" *ngFor="let juego of arrJuego">
-        <img class="card-img-top" [src]="juego.imagen" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">{{juego.nombre}}</h5>
-          <ul class="card-text" class="list-group list-group-flush">
+      <img class="card-img-top" [src]="juego.imagen" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title">{{juego.nombre}}</h5>
+        <ul class="card-text" class="list-group list-group-flush">
           <li class="list-group-item">Busca jugadores similares a tu nivel</li>
           <li class="list-group-item">Crea sinergías</li>
           <li class="list-group-item">Comparte tus partidas y resultados</li>
-          <li class="list-group-item"><a href={{juego.estadisticas}} target="_blank">Analiza tus estadísticas</a> </li></ul>
-          <button [routerLink]="['/juego',juego.id]" routerLinkActive="activa" class="btn btn-block btn-primary">Ir a {{juego.nombre}}</button>
-        </div>
+          <li class="list-group-item"><a href={{juego.estadisticas}} target="_blank">Analiza tus estadísticas</a> </li>
+        </ul>
+        <button [routerLink]="['/juego',juego.id]" routerLinkActive="activa" class="btn btn-block btn-primary">Ir a
+          {{juego.nombre}}</button>
+      </div>
       <!-- </div>
       <div class="card col-3 fortnite" style="width: 18rem;">
         <img src="https://www.tuexpertomovil.com/wp-content/uploads/2019/04/moviles-android-compatibles-con-fortnite-2.jpg" class="card-img-top">
@@ -42,6 +37,6 @@
             <li class="list-group-item"><a href="https://www.callofduty.com/es/blackopscoldwar/multiplayer" target="_blank">Analiza las estadísticas</a> </li></ul>
           <a  [routerLink]="['/juego',1]" class="btn btn-block btn-primary" >Ir a Call of Duty</a>
         </div> -->
-      </div>
+    </div>
   </div>
-  </div>
+</div>
