--- a/src/app/partida/partida.component.css
+++ b/src/app/partida/partida.component.css
@@ -1,7 +1,102 @@
+@import url(https://allfont.net/allfont.css?fonts=perfect-dark-brk);
+
+@import url(https://allfont.es/allfont.css?fonts=beyond-wonderland);
+
+* {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2rem;
+}
+
+p{
+    display: block;
+}
+
+
 .partida {
+    justify-content: center;
 
-    border: 1px solid black;
+    margin-top: 50px;
 
-    margin: 20px;
-    padding: 20px;
+    max-width: 1200px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgba(255, 255, 255, 0.541);
+    padding: 2%;
+    border: 0.5px dotted grey;
+}
+
+.fecharango {
+    width: 100%;
+   
+    background-color: rgba(255, 255, 255, 0.541);
+    margin-bottom: 5%;
+    color: black;
+    
+}
+
+.titulo {
+    /* font-family: 'Perfect Dark (BRK)', arial; */
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 3rem;
+}
+
+.texto-fecha {
+    display: inline-block;
+    font-size: 3rem;
+    padding-top: 5%;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.rango {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+}
+
+.descripcion {
+    background-color: rgba(255, 255, 255, 0.541);
+    padding: 5%;
+    font-size: 1.1rem;
+    color: black;
+    /* font-style: oblique; */
+    
+
+}
+
+.descripcion p:last-child {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.jugadores {
+    margin: 2%;
+    justify-content: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.692);
+}
+
+.jugadores p span {
+    
+    padding: 10px;
+    border-radius: 10%;
+    font-family:'Perfect Dark (BRK)', arial ;
+    font-size: 2em;
+    
+}
+
+.nombres {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    
+}
+
+.creador {
+    text-align: center;
+    width: 100%;
+}
+
+.jugador {
+    width: 46%;
+    margin: 2%;
 }
