--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -114,6 +114,9 @@
                                 </div>
                             </div>
                         </div>
+                         </div>
+                        </div>
+                         </div>
 
                 <div class="botones">
                     <button (click)="onClick(false)" [disabled]="pagina === 1">Anterior</button>
