--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -2,13 +2,16 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css');
 footer {
     background-color: var(--color-secundario);
-    padding: 0px 10px;
+    padding: 0px 0px;
     color: white;
     text-align: center;
     width: 100%;
     margin-top: 20px;
-    bottom: 0px;
+    margin-bottom: 0px;
     font-family: 'Spectral','serif';
+    /* margin-bottom: 0; */
+    position: relative;
+    bottom: 0;
 }
 
 footer a {
