--- a/src/app/formulario-login/formulario-login.component.html
+++ b/src/app/formulario-login/formulario-login.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-    <div class="container">
+    <div class="container card bg-dark">
+        <h2 class="card-title">Log In</h2>
         <div class="form-group">
             <label>Nombre de Usuario o correo electrónico</label>
             <input type="text" class="form-control" formControlName="valorLogin">
