--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -74,19 +74,21 @@
 </header> -->
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-        <button [routerLink]="['home']" class="btn img logo"> <i class="fas fa-gamepad"></i> <span> Duo</span>Tracker <i
-                class="fas fa-users"></i></button>
+    <div class="nave">
+        <button [routerLink]="['home']" class="btn img logo"> <i style="color: black;" class="fas fa-gamepad"></i> <span
+                style="font-size: 1.4em; color: black;"> D</span>uo<span
+                style="font-size: 1.4em; color: black;">T</span>racker <i style="color: black;" class="fas fa-users"
+                style="color: black;"></i></button>
         <ul class="navbar-nav ml-auto">
 
             <li *ngIf="token" class="nombre">Sesion iniciada como: <span>{{datosUsuario?.username}} <i
-                        class="fas fa-user-check"></i></span> </li>
+                        class="fas fa-user-check" style="font-size: 1.5em;"></i></span> </li>
             <li *ngIf="!token"> <i>No has iniciado sesion</i></li>
             <li class="li-nav" [routerLink]="['login']" routerLinkActive="activa" *ngIf='!token'>Login</li>
-            <li class="li-nav" [routerLink]="['registro']" routerLinkActive="activa">Registro<i
-                    class="fas fa-user-plus"></i></li>
+            <li class="li-nav" [routerLink]="['registro']" routerLinkActive="activa">Registro <i
+                    class="fas fa-user-plus" style="font-size: 1.5em;"></i></li>
             <li class="li-nav" [routerLink]="['perfil']" routerLinkActive="activa" *ngIf='token'>Ver Perfil <i
-                    class="far fa-id-badge" style="font-size: 1.5em;"></i></li>
+                    class="far fa-id-badge" style="font-size: 2em;"></i></li>
         </ul>
     </div>
 </nav>
