--- a/src/app/partida/partida.component.css
+++ b/src/app/partida/partida.component.css
@@ -2,10 +2,9 @@
 
 @import url(https://allfont.es/allfont.css?fonts=beyond-wonderland);
 
-* {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 2rem;
-}
+
+
+
 
 p{
     display: block;
@@ -22,13 +21,15 @@ p{
     flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.541);
     padding: 2%;
-    border: 0.5px dotted grey;
+    border: 0.5px solid grey;
+}
+
+.titulos {
+    width: 100%;
 }
 
 .fecharango {
     width: 100%;
-   
-    background-color: rgba(255, 255, 255, 0.541);
     margin-bottom: 5%;
     color: black;
     
@@ -45,7 +46,10 @@ p{
     font-size: 3rem;
     padding-top: 5%;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: seagreen;
 }
+
+
 
 .rango {
     display: inline-block;
@@ -53,14 +57,31 @@ p{
     height: 100px;
 }
 
+.modo {
+    width: 100%;
+    text-align: center;
+}
+
+
 .descripcion {
     background-color: rgba(255, 255, 255, 0.541);
     padding: 5%;
     font-size: 1.1rem;
     color: black;
     /* font-style: oblique; */
-    
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.4rem;
+}
 
+
+.descripcion:hover {
+    background-color:rgba(255, 255, 255, 0.959); 
+}
+
+
+.jugadores p:hover {
+    transition: 1s;
+    scale: 2;
 }
 
 .descripcion p:last-child {
@@ -69,11 +90,22 @@ p{
 
 .jugadores {
     margin: 2%;
+    display: flex;
     justify-content: center;
+    
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
-    background-color: rgba(255, 255, 255, 0.692);
+   
 }
+
+.jugadores p {
+    background-color: rgba(255, 255, 255, 0.185);
+    max-width: 400px;
+    padding: 10px;
+}
+
+
+
 
 .jugadores p span {
     
@@ -88,15 +120,45 @@ p{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    justify-content: space-between;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 1.4rem;
     
 }
 
 .creador {
-    text-align: center;
+    text-align: center ;
     width: 100%;
 }
 
 .jugador {
-    width: 46%;
+    width: 30%;
     margin: 2%;
+}
+
+.unirse {
+
+    background-color: rgba(110, 240, 84, 0.541);
+    padding: 20px;
+    margin: 10px;
+    border-radius: 5%;
+}
+
+.volver {
+    background-color: rgba(250, 91, 125, 0.541) ;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 5%;
+}
+
+.unirse:hover {
+    scale: 1.2;
+    transition: 1s;
+    background-color: rgb(110, 240, 84) ;
+}
+
+.volver:hover {
+    scale: 1.2;
+    transition: 1s;
+    background-color:rgb(250, 91, 125) ;
 }
