--- a/src/app/partida/partida.component.html
+++ b/src/app/partida/partida.component.html
@@ -2,11 +2,11 @@
 
 
     <div class="fondo"
-        style="background-color:rgba(0, 0, 0, 0.637); background-image: url('{{randomCodFoto}}'); background-size: cover; background-position: center center;">
+        style="background-color:rgba(0, 0, 0, 0.637); background-image: url('{{randomFoto}}'); background-size: cover; background-position: center center;">
         <div class="partida">
 
 
-            <div class="row row-cols-2 fecharango">
+            <div class="row row-cols-2 titulos">
                 <div class="col text-center">
                     <p class="titulo">Fecha</p>
                 </div>
@@ -16,7 +16,7 @@
             </div>
             <div class="row row-cols-2 fecharango">
                 <div class="col text-center">
-                    <p class="texto-fecha">{{partidaSeleccionada?.fecha}}</p>
+                    <p class="texto-fecha">{{partidaSeleccionada?.fecha | date:'dd/MM/yy'}}</p>
                 </div>
                 <div class="col text-center">
                     <img class="rango" src="{{partidaSeleccionada?.imagen_rango}}" alt="">
@@ -24,9 +24,12 @@
             </div>
 
 
+            <div class="modo">
+                <p class="texto-modo">{{partidaSeleccionada?.nombre_modo}}</p>
+            </div>
 
 
-            <div class="row ">
+            <div>
                 <div class=" col-12 text-center descripcion">
                     <p>Descripcion de la partida</p>
                     <p class="texto-descripcion">{{partidaSeleccionada?.descripcion}}</p>
@@ -43,12 +46,20 @@
 
             <div class="nombres">
                 <div class="creador">
-                    <p> Creada por: {{partidaSeleccionada?.username}}
+                    <p> Anfitrión: {{partidaSeleccionada?.username}} 👑
                     </p>
                 </div>
                 <div class="jugador" *ngFor="let jugador of jugadores">
-                    <p>{{jugador.username}}</p>
+                    <p>{{jugador.username}} <i class="fas fa-user-shield" style="font-size: 1.5em;"></i></p>
                 </div>
+            </div>
+
+            <div class="unir">
+                <button class="unirse" *ngIf="isLogged()" (click)="onClick()">UNIRSE A LA PARTIDA</button>
+                <p *ngIf="!isLogged()">Necesitas Iniciar sesión para unirte a la partida!! -> <span
+                        routerLink="/login">Iniciar sesión</span> </p>
+                <button class="volver" [routerLink]="['/juego',partidaSeleccionada?.id_juego]">Volver</button>
+
             </div>
 
         </div>
