--- a/src/app/juego/juego.component.html
+++ b/src/app/juego/juego.component.html
@@ -1,11 +1,11 @@
-<div class="row">
+
     <div>
         <div class="hero">
             <img [src]="arrJuegos[idJuego]?.logo">
             <h3>{{arrJuegos[idJuego]?.nombre}}</h3>
         </div>
     </div>
-
+    <div class="row"></div>
     <div class="container">
         <div class="row buttons">
             <div class="col-3">
