--- a/src/app/formulario-login/formulario-login.component.css
+++ b/src/app/formulario-login/formulario-login.component.css
@@ -15,7 +15,7 @@ form{
     
 }
 .form-group{
-    font-family: 'Nasalization Free';
+    
     margin-top: 25px;
 }
 .consolas{
@@ -24,11 +24,15 @@ form{
     margin-top: 15px;
     width: 30%;
 }
+.form-group input .form-control{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .input{
     width: 95%;
 }
 label{
     color: white;
+    font-family: 'Nasalization Free';
 }
 .botonOjo{
     width: 5%;
