--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h1 class="display-4">Duo<span>Tracker</span></h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
+  <!-- <hr class="my-4 "> -->
   <p>DuoTracker es una plataforma web que permite: crear partidas de los videojuegos mas populares , asi como unirte a otras ya creadas, pudiendo competir contra jugadores/as de todo el mundo</p>
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
