--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -4,7 +4,7 @@
     <div class="row perfil">
         <div class="col-2.5">
             <img src="../../assets/images/pngwing.com.png" alt="" style="max-width: 150px;">
-            <ul class="list-group row" *ngIf="mostrarDatos">
+            <ul class="list-group row card bg-dark" *ngIf="mostrarDatos">
                 <li class="list-group-item">Nombre de usuario: {{usuarioDatos?.username}}</li>
                 <li class="list-group-item">Email: {{usuarioDatos?.email}}</li>
                 <li class="list-group-item">Plataforma preferida: {{usuarioDatos?.plataforma_preferida}}</li>
@@ -36,46 +36,48 @@
 
 
     <!-- MODIFICAR PERFIL -->
-    <div class="form-group formularioModificacion" *ngIf="mostrarForm">
+    <div class="formularioModificacion " *ngIf="mostrarForm">
         <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-            <input hidden type="number" formControlName="id">
-            <div class="form-group">
-                <label for="username">Nombre de usuario</label>
-                <input type="text" value={{usuarioDatos?.username}} formControlName="username" [placeholder]="usuarioDatos?.username">
-                <p class="text-danger"
-                    *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched"> El
-                    campo nombre de usuario es requerido.</p>
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" value={{usuarioDatos?.email}} formControlName="email" [placeholder]="usuarioDatos?.email">
-                <p class="text-danger"
-                    *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
-                    obligatorio completar este campo.</p>
-                <p class="text-danger"
-                    *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
-                    no es válido</p>
-            </div>
-            <div class="form-group">
-                <label for="">Plataforma Preferida</label>
-                <select formControlName="plataforma_preferida">
-                    <option disabled value="">Selecciona una plataforma</option>
-                    <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
-                    </option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="">Juego Preferido</label>
-                <select formControlName="juego_preferido">
-                    <option disabled value="">Selecciona un juego</option>
-                    <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
-                </select>
-            </div>
+            <div class=" container card bg-dark">
+                <h2 class="card-title">Editar Perfil</h2>
+                <input hidden type="number" formControlName="id">
+                <div class="form-group ">
+                    <label >Nombre de usuario</label>
+                    <input type="text" value={{usuarioDatos?.username}} formControlName="username" [placeholder]="usuarioDatos?.username">
+                    <p class="text-danger"
+                        *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched"> El
+                        campo nombre de usuario es requerido.</p>
+                </div>
+                <div class="form-group">
+                    <label >Email</label>
+                    <input type="text" value={{usuarioDatos?.email}} formControlName="email" [placeholder]="usuarioDatos?.email">
+                    <p class="text-danger"
+                        *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
+                        obligatorio completar este campo.</p>
+                    <p class="text-danger"
+                        *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
+                        no es válido</p>
+                </div>
+                <div class="form-group">
+                    <label for="">Plataforma Preferida</label>
+                    <select formControlName="plataforma_preferida">
+                        <option disabled value="">Selecciona una plataforma</option>
+                        <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
+                        </option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="">Juego Preferido</label>
+                    <select formControlName="juego_preferido">
+                        <option disabled value="">Selecciona un juego</option>
+                        <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
+                    </select>
+                </div>
 
 
-            <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
+                <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
             
-            
+            </div>
         </form>
         
     </div>
