--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -115,7 +115,11 @@ nav ul li {
     width: 33%;
     padding: 10px;
     text-align: center;
+    font-size: 1.5em;
    
+}
+nav ul li span {
+    font-family: ;
 }
 nav {
     margin-bottom: 10%;
@@ -130,10 +134,11 @@ nav ul li.li-nav:hover {
 
 .logo {
     font-family: 'Perfect Dark (BRK)', arial;
-    font-size: 2em;
+    font-size: 2.3em;
     width: 40%;
     text-align: center;
     margin-left: 5em;
+    text-shadow: 1px 1px white;
     
 }
 .logo:hover {
