--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer >
+<footer class="bg-dark">
     <a class="volverInicio"  href=""><i class="fas fa-angle-up"></i></a>
     <div>
         <p>Copyright &copy; 2020 - <a href="">Aviso Legal</a> - <a href="#">Cookies</a></p>
