--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,8 +1,13 @@
 <div class="perfil" *ngIf="mostrarDatos">
-    <div class="foto">
+    
+    <!-- <div class="foto">
         <img src="../../assets/images/pngwing.com.png" style="width: 150px; height: 150px;" alt="">
-    </div>
-    <div class="datos">
+    </div> -->
+    <div class="datos card bg-dark">
+        <div class="foto">
+            <img src="../../assets/images/pngwing.com.png" style="width: 150px; height: 150px;" alt="">
+        </div>
+        <h4>Mi Perfil</h4>
         <p>Nombre de usuario: {{usuarioDatos?.username}}</p>
         <p>Email: {{usuarioDatos?.email}}</p>
         <p>Plataforma preferida: {{usuarioDatos?.plataforma_preferida}}</p>
@@ -14,11 +19,11 @@
     </div>
 
     <div class="partidas">
-        <h4>ultimas partidas</h4>
-        <div class="partida" *ngFor="let registro of arrRegistros">
+        <h4>Ultimas partidas</h4>
+        <div class="partida bg-dark" *ngFor="let registro of arrRegistros">
             <p>{{registro.fecha | date: "dd/MM/yy"}}</p>
             <p>{{registro.nombre_modo}}</p>
-            <img src={{registro.imagen_juego}} style="width: 30px; height: 30px">
+            <img class="imagenJuego" src={{registro.imagen_juego}} style="width: 30px; height: 30px">
             <p>{{registro.cantidad_jugadores}} / {{registro.jugadores_max}}</p>
             <p><i [routerLink]="['/juego', registro.id_juego, 'partidas', registro.registro_partida ]"
                     class="far fa-arrow-alt-circle-right" style="cursor: pointer;"></i></p>
@@ -26,53 +31,63 @@
     </div>
 </div>
 
-
-<div class="form-group formularioModificacion" *ngIf="mostrarForm">
+<div class="editaPerfil">
+<div class="formularioModificacion" *ngIf="mostrarForm">
     <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-        <input hidden type="number" formControlName="id">
-        <div class="form-group">
-            <label for="username">Nombre de usuario</label>
-            <input type="text" value={{usuarioDatos?.username}} formControlName="username"
-                [placeholder]="usuarioDatos?.username">
-            <p class="text-danger"
-                *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched">
-                El
-                campo nombre de usuario es requerido.</p>
-        </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" value={{usuarioDatos?.email}} formControlName="email"
-                [placeholder]="usuarioDatos?.email">
-            <p class="text-danger"
-                *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
-                obligatorio completar este campo.</p>
-            <p class="text-danger"
-                *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
-                no es válido</p>
-        </div>
-        <div class="form-group">
-            <label for="">Plataforma Preferida</label>
-            <select formControlName="plataforma_preferida">
-                <option disabled value="">Selecciona una plataforma</option>
-                <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
-                </option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="">Juego Preferido</label>
-            <select formControlName="juego_preferido">
-                <option disabled value="">Selecciona un juego</option>
-                <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
-            </select>
-        </div>
+        
+        <div class="container card bg-dark perfilunico">
+            <h4>Edita tu Perfil</h4>
+            <div class="fotoform">
+                <img src="../../assets/images/pngwing.com.png" style="width: 150px; height: 150px;" alt="">
+            </div>
+            <div class="form-group">
+                <input hidden type="number" formControlName="id">
+            </div>
+            <div class="form-group">
+                <label>Nombre de usuario</label>
+                <input type="text" value={{usuarioDatos?.username}} formControlName="username"
+                    [placeholder]="usuarioDatos?.username">
+                <p class="text-danger"
+                    *ngIf="formulario.get('username').hasError('required') && formulario.get('username').touched">
+                    El
+                    campo nombre de usuario es requerido.</p>
+            </div>
+            <div class="form-group">
+                <label>Email</label>
+                <input type="text" value={{usuarioDatos?.email}} formControlName="email"
+                    [placeholder]="usuarioDatos?.email">
+                <p class="text-danger"
+                    *ngIf="formulario.get('email').hasError('required') && formulario.get('email').touched">Es
+                    obligatorio completar este campo.</p>
+                <p class="text-danger"
+                    *ngIf="formulario.get('email').hasError('pattern') && formulario.get('email').touched">El email
+                    no es válido</p>
+            </div>
+            <div class="form-group">
+                <label for="">Plataforma Preferida</label>
+                <select formControlName="plataforma_preferida">
+                    <option disabled value="">Selecciona una plataforma</option>
+                    <option value={{plataforma}} *ngFor="let plataforma of arrPlataformas">{{plataforma}}
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="">Juego Preferido</label>
+                <select formControlName="juego_preferido">
+                    <option disabled value="">Selecciona un juego</option>
+                    <option value={{juego.nombre}} *ngFor="let juego of arrJuegos">{{juego.nombre}}</option>
+                </select>
+            </div>
 
 
-        <input type="submit" value="Guardar cambios" class="btn btn-info" *ngIf="mostrarGuardar">
+            <input type="submit" value="Guardar cambios" class="btn btn-info botonGuardar" *ngIf="mostrarGuardar">
 
-
+        </div>
     </form>
 
 </div>
+
 <div class="cancelarModificacion">
     <button (click)="botonCancelar()" *ngIf="mostrarCancelar" class="btn btn-danger"> Cancelar</button>
+</div>
 </div>
